.antlr/calcit2Parser.java
// Generated from /Users/0x52696365/Documents/projects/Calcit2/calcit2.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class calcit2Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, GREATER=3, LESS=4, PLUS=5, MINUS=6, MULTIPLY=7, DIVIDE=8, 
		MODULO=9, NOT=10, LPAREN=11, RPAREN=12, COLON=13, EQUALS=14, POW=15, COLON_EQUALS=16, 
		SEMICOLON=17, BIT_AND=18, BIT_OR=19, BIT_XOR=20, BIT_CLEAR=21, LSHIFT=22, 
		RSHIFT=23, LOGICAL_AND=24, LOGICAL_OR=25, EQUAL=26, NOT_EQUAL=27, LESS_OR_EQUAL=28, 
		GREATER_OR_EQUAL=29, HEX_TYPE=30, BIN_TYPE=31, OCT_TYPE=32, F_TYPE=33, 
		I_TYPE=34, B_TYPE=35, S_TYPE=36, P_CAST=37, FUNCTION_NAME=38, IDENTIFIER=39, 
		HEX_LITERAL=40, BIN_LITERAL=41, OCT_LITERAL=42, INTEGER_LITERAL=43, FLOAT_LITERAL=44, 
		CHAR_LITERAL=45, WS=46;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_function_assignment = 2, RULE_expression = 3, 
		RULE_number = 4, RULE_any = 5, RULE_integer_expression = 6, RULE_integer_cast_expression = 7, 
		RULE_integer_pcast_expression = 8, RULE_float_expression = 9, RULE_float_cast_expression = 10, 
		RULE_float_pcast_expression = 11, RULE_bool_expression = 12, RULE_bool_cast_expression = 13, 
		RULE_bool_number_operation = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "function_assignment", "expression", "number", 
			"any", "integer_expression", "integer_cast_expression", "integer_pcast_expression", 
			"float_expression", "float_cast_expression", "float_pcast_expression", 
			"bool_expression", "bool_cast_expression", "bool_number_operation"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'true'", "'false'", "'>'", "'<'", "'+'", "'-'", "'*'", "'/'", 
			"'%'", "'!'", "'('", "')'", "':'", "'='", "'**'", "':='", "';'", "'&'", 
			"'|'", "'^'", "'&^'", "'<<'", "'>>'", "'&&'", "'||'", "'=='", "'!='", 
			"'<='", "'>='", "'hex'", "'bin'", "'oct'", "'float'", "'int'", "'bool'", 
			"'string'", "'pcast'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "GREATER", "LESS", "PLUS", "MINUS", "MULTIPLY", "DIVIDE", 
			"MODULO", "NOT", "LPAREN", "RPAREN", "COLON", "EQUALS", "POW", "COLON_EQUALS", 
			"SEMICOLON", "BIT_AND", "BIT_OR", "BIT_XOR", "BIT_CLEAR", "LSHIFT", "RSHIFT", 
			"LOGICAL_AND", "LOGICAL_OR", "EQUAL", "NOT_EQUAL", "LESS_OR_EQUAL", "GREATER_OR_EQUAL", 
			"HEX_TYPE", "BIN_TYPE", "OCT_TYPE", "F_TYPE", "I_TYPE", "B_TYPE", "S_TYPE", 
			"P_CAST", "FUNCTION_NAME", "IDENTIFIER", "HEX_LITERAL", "BIN_LITERAL", 
			"OCT_LITERAL", "INTEGER_LITERAL", "FLOAT_LITERAL", "CHAR_LITERAL", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "calcit2.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public calcit2Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 35114578873414L) != 0)) {
				{
				{
				setState(30);
				statement();
				}
				}
				setState(35);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Function_assignmentContext function_assignment() {
			return getRuleContext(Function_assignmentContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(38);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case FUNCTION_NAME:
				enterOuterAlt(_localctx, 1);
				{
				setState(36);
				function_assignment();
				}
				break;
			case T__0:
			case T__1:
			case MINUS:
			case NOT:
			case LPAREN:
			case HEX_TYPE:
			case BIN_TYPE:
			case OCT_TYPE:
			case F_TYPE:
			case I_TYPE:
			case B_TYPE:
			case P_CAST:
			case IDENTIFIER:
			case HEX_LITERAL:
			case BIN_LITERAL:
			case OCT_LITERAL:
			case INTEGER_LITERAL:
			case FLOAT_LITERAL:
				enterOuterAlt(_localctx, 2);
				{
				setState(37);
				expression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Function_assignmentContext extends ParserRuleContext {
		public TerminalNode FUNCTION_NAME() { return getToken(calcit2Parser.FUNCTION_NAME, 0); }
		public TerminalNode LPAREN() { return getToken(calcit2Parser.LPAREN, 0); }
		public TerminalNode IDENTIFIER() { return getToken(calcit2Parser.IDENTIFIER, 0); }
		public TerminalNode RPAREN() { return getToken(calcit2Parser.RPAREN, 0); }
		public TerminalNode EQUALS() { return getToken(calcit2Parser.EQUALS, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Function_assignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_assignment; }
	}

	public final Function_assignmentContext function_assignment() throws RecognitionException {
		Function_assignmentContext _localctx = new Function_assignmentContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_function_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(FUNCTION_NAME);
			setState(41);
			match(LPAREN);
			setState(42);
			match(IDENTIFIER);
			setState(43);
			match(RPAREN);
			setState(44);
			match(EQUALS);
			setState(45);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public Integer_expressionContext integer_expression() {
			return getRuleContext(Integer_expressionContext.class,0);
		}
		public Float_expressionContext float_expression() {
			return getRuleContext(Float_expressionContext.class,0);
		}
		public Bool_expressionContext bool_expression() {
			return getRuleContext(Bool_expressionContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_expression);
		try {
			setState(50);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(47);
				integer_expression(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(48);
				float_expression(0);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(49);
				bool_expression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NumberContext extends ParserRuleContext {
		public Integer_expressionContext integer_expression() {
			return getRuleContext(Integer_expressionContext.class,0);
		}
		public Float_expressionContext float_expression() {
			return getRuleContext(Float_expressionContext.class,0);
		}
		public NumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_number; }
	}

	public final NumberContext number() throws RecognitionException {
		NumberContext _localctx = new NumberContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_number);
		try {
			setState(54);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(52);
				integer_expression(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(53);
				float_expression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AnyContext extends ParserRuleContext {
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public Bool_expressionContext bool_expression() {
			return getRuleContext(Bool_expressionContext.class,0);
		}
		public AnyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_any; }
	}

	public final AnyContext any() throws RecognitionException {
		AnyContext _localctx = new AnyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_any);
		try {
			setState(58);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				number();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				bool_expression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Integer_expressionContext extends ParserRuleContext {
		public Integer_expressionContext left;
		public Integer_expressionContext right;
		public Token op;
		public TerminalNode LPAREN() { return getToken(calcit2Parser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(calcit2Parser.RPAREN, 0); }
		public List<Integer_expressionContext> integer_expression() {
			return getRuleContexts(Integer_expressionContext.class);
		}
		public Integer_expressionContext integer_expression(int i) {
			return getRuleContext(Integer_expressionContext.class,i);
		}
		public Integer_cast_expressionContext integer_cast_expression() {
			return getRuleContext(Integer_cast_expressionContext.class,0);
		}
		public Integer_pcast_expressionContext integer_pcast_expression() {
			return getRuleContext(Integer_pcast_expressionContext.class,0);
		}
		public TerminalNode MINUS() { return getToken(calcit2Parser.MINUS, 0); }
		public TerminalNode NOT() { return getToken(calcit2Parser.NOT, 0); }
		public TerminalNode INTEGER_LITERAL() { return getToken(calcit2Parser.INTEGER_LITERAL, 0); }
		public TerminalNode HEX_LITERAL() { return getToken(calcit2Parser.HEX_LITERAL, 0); }
		public TerminalNode BIN_LITERAL() { return getToken(calcit2Parser.BIN_LITERAL, 0); }
		public TerminalNode OCT_LITERAL() { return getToken(calcit2Parser.OCT_LITERAL, 0); }
		public TerminalNode IDENTIFIER() { return getToken(calcit2Parser.IDENTIFIER, 0); }
		public TerminalNode POW() { return getToken(calcit2Parser.POW, 0); }
		public TerminalNode MULTIPLY() { return getToken(calcit2Parser.MULTIPLY, 0); }
		public TerminalNode DIVIDE() { return getToken(calcit2Parser.DIVIDE, 0); }
		public TerminalNode MODULO() { return getToken(calcit2Parser.MODULO, 0); }
		public TerminalNode PLUS() { return getToken(calcit2Parser.PLUS, 0); }
		public TerminalNode BIT_AND() { return getToken(calcit2Parser.BIT_AND, 0); }
		public TerminalNode BIT_OR() { return getToken(calcit2Parser.BIT_OR, 0); }
		public TerminalNode BIT_XOR() { return getToken(calcit2Parser.BIT_XOR, 0); }
		public TerminalNode BIT_CLEAR() { return getToken(calcit2Parser.BIT_CLEAR, 0); }
		public TerminalNode LSHIFT() { return getToken(calcit2Parser.LSHIFT, 0); }
		public TerminalNode RSHIFT() { return getToken(calcit2Parser.RSHIFT, 0); }
		public Integer_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_integer_expression; }
	}

	public final Integer_expressionContext integer_expression() throws RecognitionException {
		return integer_expression(0);
	}

	private Integer_expressionContext integer_expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Integer_expressionContext _localctx = new Integer_expressionContext(_ctx, _parentState);
		Integer_expressionContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_integer_expression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LPAREN:
				{
				setState(61);
				match(LPAREN);
				setState(62);
				((Integer_expressionContext)_localctx).right = integer_expression(0);
				setState(63);
				match(RPAREN);
				}
				break;
			case HEX_TYPE:
			case BIN_TYPE:
			case OCT_TYPE:
			case F_TYPE:
			case I_TYPE:
				{
				setState(65);
				integer_cast_expression();
				}
				break;
			case P_CAST:
				{
				setState(66);
				integer_pcast_expression();
				}
				break;
			case MINUS:
				{
				setState(67);
				((Integer_expressionContext)_localctx).op = match(MINUS);
				setState(68);
				((Integer_expressionContext)_localctx).right = integer_expression(7);
				}
				break;
			case NOT:
				{
				setState(69);
				((Integer_expressionContext)_localctx).op = match(NOT);
				setState(70);
				((Integer_expressionContext)_localctx).right = integer_expression(6);
				}
				break;
			case IDENTIFIER:
			case HEX_LITERAL:
			case BIN_LITERAL:
			case OCT_LITERAL:
			case INTEGER_LITERAL:
				{
				setState(71);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 17042430230528L) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(88);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(86);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
					case 1:
						{
						_localctx = new Integer_expressionContext(_parentctx, _parentState);
						_localctx.left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_integer_expression);
						setState(74);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(75);
						((Integer_expressionContext)_localctx).op = match(POW);
						setState(76);
						((Integer_expressionContext)_localctx).right = integer_expression(6);
						}
						break;
					case 2:
						{
						_localctx = new Integer_expressionContext(_parentctx, _parentState);
						_localctx.left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_integer_expression);
						setState(77);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(78);
						((Integer_expressionContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 896L) != 0)) ) {
							((Integer_expressionContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(79);
						((Integer_expressionContext)_localctx).right = integer_expression(5);
						}
						break;
					case 3:
						{
						_localctx = new Integer_expressionContext(_parentctx, _parentState);
						_localctx.left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_integer_expression);
						setState(80);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(81);
						((Integer_expressionContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==PLUS || _la==MINUS) ) {
							((Integer_expressionContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(82);
						((Integer_expressionContext)_localctx).right = integer_expression(4);
						}
						break;
					case 4:
						{
						_localctx = new Integer_expressionContext(_parentctx, _parentState);
						_localctx.left = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_integer_expression);
						setState(83);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(84);
						((Integer_expressionContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 16515072L) != 0)) ) {
							((Integer_expressionContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(85);
						((Integer_expressionContext)_localctx).right = integer_expression(3);
						}
						break;
					}
					} 
				}
				setState(90);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Integer_cast_expressionContext extends ParserRuleContext {
		public Token op;
		public NumberContext right;
		public TerminalNode LPAREN() { return getToken(calcit2Parser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(calcit2Parser.RPAREN, 0); }
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public TerminalNode HEX_TYPE() { return getToken(calcit2Parser.HEX_TYPE, 0); }
		public TerminalNode BIN_TYPE() { return getToken(calcit2Parser.BIN_TYPE, 0); }
		public TerminalNode OCT_TYPE() { return getToken(calcit2Parser.OCT_TYPE, 0); }
		public TerminalNode I_TYPE() { return getToken(calcit2Parser.I_TYPE, 0); }
		public TerminalNode F_TYPE() { return getToken(calcit2Parser.F_TYPE, 0); }
		public Integer_cast_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_integer_cast_expression; }
	}

	public final Integer_cast_expressionContext integer_cast_expression() throws RecognitionException {
		Integer_cast_expressionContext _localctx = new Integer_cast_expressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_integer_cast_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			((Integer_cast_expressionContext)_localctx).op = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 33285996544L) != 0)) ) {
				((Integer_cast_expressionContext)_localctx).op = (Token)_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(92);
			match(LPAREN);
			setState(93);
			((Integer_cast_expressionContext)_localctx).right = number();
			setState(94);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Integer_pcast_expressionContext extends ParserRuleContext {
		public Token op;
		public Float_expressionContext right;
		public TerminalNode LPAREN() { return getToken(calcit2Parser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(calcit2Parser.RPAREN, 0); }
		public TerminalNode P_CAST() { return getToken(calcit2Parser.P_CAST, 0); }
		public Float_expressionContext float_expression() {
			return getRuleContext(Float_expressionContext.class,0);
		}
		public Integer_pcast_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_integer_pcast_expression; }
	}

	public final Integer_pcast_expressionContext integer_pcast_expression() throws RecognitionException {
		Integer_pcast_expressionContext _localctx = new Integer_pcast_expressionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_integer_pcast_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			((Integer_pcast_expressionContext)_localctx).op = match(P_CAST);
			setState(97);
			match(LPAREN);
			setState(98);
			((Integer_pcast_expressionContext)_localctx).right = float_expression(0);
			setState(99);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Float_expressionContext extends ParserRuleContext {
		public Float_expressionContext left;
		public Float_expressionContext right;
		public Token op;
		public TerminalNode LPAREN() { return getToken(calcit2Parser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(calcit2Parser.RPAREN, 0); }
		public List<Float_expressionContext> float_expression() {
			return getRuleContexts(Float_expressionContext.class);
		}
		public Float_expressionContext float_expression(int i) {
			return getRuleContext(Float_expressionContext.class,i);
		}
		public Float_cast_expressionContext float_cast_expression() {
			return getRuleContext(Float_cast_expressionContext.class,0);
		}
		public Float_pcast_expressionContext float_pcast_expression() {
			return getRuleContext(Float_pcast_expressionContext.class,0);
		}
		public TerminalNode MINUS() { return getToken(calcit2Parser.MINUS, 0); }
		public TerminalNode FLOAT_LITERAL() { return getToken(calcit2Parser.FLOAT_LITERAL, 0); }
		public TerminalNode IDENTIFIER() { return getToken(calcit2Parser.IDENTIFIER, 0); }
		public TerminalNode POW() { return getToken(calcit2Parser.POW, 0); }
		public TerminalNode MULTIPLY() { return getToken(calcit2Parser.MULTIPLY, 0); }
		public TerminalNode DIVIDE() { return getToken(calcit2Parser.DIVIDE, 0); }
		public TerminalNode PLUS() { return getToken(calcit2Parser.PLUS, 0); }
		public Float_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_float_expression; }
	}

	public final Float_expressionContext float_expression() throws RecognitionException {
		return float_expression(0);
	}
